# ml_notebooks

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pytorch_mnist_cnn.ipynb  toy_optimization.ipynb
environments/: environments.py  tetris_game.py
ml_modules/: __init__.py  data.py  models.py  train.py  visualize.py
notebooks/: makemore_pt3.ipynb  pytorch_mnist_cnn.ipynb
